Meta4/y.output
Terminals unused in grammar

    RESERVED
    INTEGER


Grammar

    0 $accept: program $end

    1 program: CLASS IDENTIFIER LBRACE DeclList RBRACE

    2 DeclList: DeclList MethodDecl
    3         | DeclList FieldDecl
    4         | DeclList SEMICOLON
    5         | ε

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    7 FieldDecl: PUBLIC STATIC Type IdentList SEMICOLON
    8          | error SEMICOLON

    9 IdentList: IdentList COMMA IDENTIFIER
   10          | IDENTIFIER

   11 IdentListVar: IdentListVar COMMA IDENTIFIER
   12             | IDENTIFIER

   13 Type: BOOL
   14     | INT
   15     | DOUBLE

   16 MethodHeader: Type IDENTIFIER LPAR FormalParamOpt RPAR
   17             | VOID IDENTIFIER LPAR FormalParamOpt RPAR

   18 FormalParamOpt: FormalParams
   19               | ε

   20 FormalParams: NormalParams
   21             | STRING LSQ RSQ IDENTIFIER

   22 NormalParams: Type IDENTIFIER
   23             | NormalParams COMMA Type IDENTIFIER

   24 MethodBody: LBRACE StmtOrVarList RBRACE

   25 StmtOrVarList: StmtOrVarList Statement
   26              | StmtOrVarList VarDecl
   27              | ε

   28 VarDecl: Type IdentListVar SEMICOLON

   29 Statement: LBRACE StmtList RBRACE
   30          | IfStmt
   31          | SEMICOLON
   32          | WHILE LPAR Expr RPAR Statement
   33          | RETURN ExprOpt SEMICOLON
   34          | ExprStmt SEMICOLON
   35          | PRINT LPAR Expr RPAR SEMICOLON
   36          | PRINT LPAR STRLIT RPAR SEMICOLON
   37          | error SEMICOLON

   38 StmtList: StmtList Statement
   39         | ε

   40 IfStmt: IF LPAR Expr RPAR Statement ELSE Statement
   41       | IF LPAR Expr RPAR Statement

   42 ExprOpt: Expr
   43        | ε

   44 ExprStmt: IDENTIFIER LPAR ArgListOpt RPAR
   45         | IDENTIFIER LPAR error RPAR
   46         | IDENTIFIER ASSIGN Expr
   47         | PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   48         | PARSEINT LPAR error RPAR

   49 Expr: AssignExpr
   50     | LPAR error RPAR

   51 AssignExpr: IDENTIFIER ASSIGN AssignExpr
   52           | OrExpr

   53 OrExpr: OrExpr OR AndExpr
   54       | AndExpr

   55 AndExpr: AndExpr AND XorExpr
   56        | XorExpr

   57 XorExpr: XorExpr XOR EqExpr
   58        | EqExpr

   59 EqExpr: EqExpr EQ RelExpr
   60       | EqExpr NE RelExpr
   61       | RelExpr

   62 RelExpr: RelExpr LT ShiftExpr
   63        | RelExpr LE ShiftExpr
   64        | RelExpr GT ShiftExpr
   65        | RelExpr GE ShiftExpr
   66        | ShiftExpr

   67 ShiftExpr: ShiftExpr LSHIFT AddExpr
   68          | ShiftExpr RSHIFT AddExpr
   69          | AddExpr

   70 AddExpr: AddExpr PLUS MulExpr
   71        | AddExpr MINUS MulExpr
   72        | MulExpr

   73 MulExpr: MulExpr STAR UnaryExpr
   74        | MulExpr DIV UnaryExpr
   75        | MulExpr MOD UnaryExpr
   76        | UnaryExpr

   77 UnaryExpr: MINUS UnaryExpr
   78          | NOT UnaryExpr
   79          | PLUS UnaryExpr
   80          | PostfixExpr

   81 PostfixExpr: IDENTIFIER DOTLENGTH
   82            | IDENTIFIER LPAR ArgListOpt RPAR
   83            | IDENTIFIER LPAR error RPAR
   84            | PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   85            | PARSEINT LPAR error RPAR
   86            | LPAR Expr RPAR
   87            | IDENTIFIER
   88            | NATURAL
   89            | DECIMAL
   90            | BOOLLIT

   91 ArgListOpt: ArgList
   92           | ε

   93 ArgList: Expr
   94        | ArgList COMMA Expr


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 37 45 48 50 83 85
    CLASS (258) 1
    LBRACE (259) 1 24 29
    RBRACE (260) 1 24 29
    PUBLIC (261) 6 7
    STATIC (262) 6 7
    SEMICOLON (263) 4 7 8 28 31 33 34 35 36 37
    COMMA (264) 9 11 23 94
    BOOL (265) 13
    INT (266) 14
    VOID (267) 17
    STRING (268) 21
    LPAR (269) 16 17 32 35 36 40 41 44 45 47 48 50 82 83 84 85 86
    RPAR (270) 16 17 32 35 36 40 41 44 45 47 48 50 82 83 84 85 86
    LSQ (271) 21 47 84
    RSQ (272) 21 47 84
    IF (273) 40 41
    ELSE (274) 40
    WHILE (275) 32
    RETURN (276) 33
    PRINT (277) 35 36
    PARSEINT (278) 47 48 84 85
    DOTLENGTH (279) 81
    ASSIGN (280) 46 51
    OR (281) 53
    AND (282) 55
    LT (283) 62
    LE (284) 63
    GT (285) 64
    GE (286) 65
    LSHIFT (287) 67
    RSHIFT (288) 68
    STAR (289) 73
    DIV (290) 74
    MOD (291) 75
    NOT (292) 78
    RESERVED (293)
    IDENTIFIER <lexeme> (294) 1 9 10 11 12 16 17 21 22 23 44 45 46 47 51 81 82 83 84 87
    NATURAL <lexeme> (295) 88
    DECIMAL <lexeme> (296) 89
    INTEGER <lexeme> (297)
    DOUBLE <lexeme> (298) 15
    STRLIT <lexeme> (299) 36
    BOOLLIT <lexeme> (300) 90
    XOR <lexeme> (301) 57
    EQ <lexeme> (302) 59
    NE <lexeme> (303) 60
    PLUS <lexeme> (304) 70 79
    MINUS <lexeme> (305) 71 77
    WITHOUT_ELSE (306)


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    program <node> (53)
        on left: 1
        on right: 0
    DeclList <node> (54)
        on left: 2 3 4 5
        on right: 1 2 3 4
    MethodDecl <node> (55)
        on left: 6
        on right: 2
    FieldDecl <node> (56)
        on left: 7 8
        on right: 3
    IdentList <node> (57)
        on left: 9 10
        on right: 7 9
    IdentListVar <node> (58)
        on left: 11 12
        on right: 11 28
    Type <node> (59)
        on left: 13 14 15
        on right: 7 16 22 23 28
    MethodHeader <node> (60)
        on left: 16 17
        on right: 6
    FormalParamOpt <node> (61)
        on left: 18 19
        on right: 16 17
    FormalParams <node> (62)
        on left: 20 21
        on right: 18
    NormalParams <node> (63)
        on left: 22 23
        on right: 20 23
    MethodBody <node> (64)
        on left: 24
        on right: 6
    StmtOrVarList <node> (65)
        on left: 25 26 27
        on right: 24 25 26
    VarDecl <node> (66)
        on left: 28
        on right: 26
    Statement <node> (67)
        on left: 29 30 31 32 33 34 35 36 37
        on right: 25 32 38 40 41
    StmtList <node> (68)
        on left: 38 39
        on right: 29 38
    IfStmt <node> (69)
        on left: 40 41
        on right: 30
    ExprOpt <node> (70)
        on left: 42 43
        on right: 33
    ExprStmt <node> (71)
        on left: 44 45 46 47 48
        on right: 34
    Expr <node> (72)
        on left: 49 50
        on right: 32 35 40 41 42 46 47 84 86 93 94
    AssignExpr <node> (73)
        on left: 51 52
        on right: 49 51
    OrExpr <node> (74)
        on left: 53 54
        on right: 52 53
    AndExpr <node> (75)
        on left: 55 56
        on right: 53 54 55
    XorExpr <node> (76)
        on left: 57 58
        on right: 55 56 57
    EqExpr <node> (77)
        on left: 59 60 61
        on right: 57 58 59 60
    RelExpr <node> (78)
        on left: 62 63 64 65 66
        on right: 59 60 61 62 63 64 65
    ShiftExpr <node> (79)
        on left: 67 68 69
        on right: 62 63 64 65 66 67 68
    AddExpr <node> (80)
        on left: 70 71 72
        on right: 67 68 69 70 71
    MulExpr <node> (81)
        on left: 73 74 75 76
        on right: 70 71 72 73 74 75
    UnaryExpr <node> (82)
        on left: 77 78 79 80
        on right: 73 74 75 76 77 78 79
    PostfixExpr <node> (83)
        on left: 81 82 83 84 85 86 87 88 89 90
        on right: 80
    ArgListOpt <node> (84)
        on left: 91 92
        on right: 44 82
    ArgList <node> (85)
        on left: 93 94
        on right: 91 94


State 0

    0 $accept: • program $end
    1 program: • CLASS IDENTIFIER LBRACE DeclList RBRACE

    CLASS  shift, and go to state 1

    program  go to state 2


State 1

    1 program: CLASS • IDENTIFIER LBRACE DeclList RBRACE

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: CLASS IDENTIFIER • LBRACE DeclList RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: CLASS IDENTIFIER LBRACE • DeclList RBRACE
    2 DeclList: • DeclList MethodDecl
    3         | • DeclList FieldDecl
    4         | • DeclList SEMICOLON
    5         | ε •

    $default  reduce using rule 5 (DeclList)

    DeclList  go to state 6


State 6

    1 program: CLASS IDENTIFIER LBRACE DeclList • RBRACE
    2 DeclList: DeclList • MethodDecl
    3         | DeclList • FieldDecl
    4         | DeclList • SEMICOLON
    6 MethodDecl: • PUBLIC STATIC MethodHeader MethodBody
    7 FieldDecl: • PUBLIC STATIC Type IdentList SEMICOLON
    8          | • error SEMICOLON

    error      shift, and go to state 7
    RBRACE     shift, and go to state 8
    PUBLIC     shift, and go to state 9
    SEMICOLON  shift, and go to state 10

    MethodDecl  go to state 11
    FieldDecl   go to state 12


State 7

    8 FieldDecl: error • SEMICOLON

    SEMICOLON  shift, and go to state 13


State 8

    1 program: CLASS IDENTIFIER LBRACE DeclList RBRACE •

    $default  reduce using rule 1 (program)


State 9

    6 MethodDecl: PUBLIC • STATIC MethodHeader MethodBody
    7 FieldDecl: PUBLIC • STATIC Type IdentList SEMICOLON

    STATIC  shift, and go to state 14


State 10

    4 DeclList: DeclList SEMICOLON •

    $default  reduce using rule 4 (DeclList)


State 11

    2 DeclList: DeclList MethodDecl •

    $default  reduce using rule 2 (DeclList)


State 12

    3 DeclList: DeclList FieldDecl •

    $default  reduce using rule 3 (DeclList)


State 13

    8 FieldDecl: error SEMICOLON •

    $default  reduce using rule 8 (FieldDecl)


State 14

    6 MethodDecl: PUBLIC STATIC • MethodHeader MethodBody
    7 FieldDecl: PUBLIC STATIC • Type IdentList SEMICOLON
   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   16 MethodHeader: • Type IDENTIFIER LPAR FormalParamOpt RPAR
   17             | • VOID IDENTIFIER LPAR FormalParamOpt RPAR

    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    VOID    shift, and go to state 17
    DOUBLE  shift, and go to state 18

    Type          go to state 19
    MethodHeader  go to state 20


State 15

   13 Type: BOOL •

    $default  reduce using rule 13 (Type)


State 16

   14 Type: INT •

    $default  reduce using rule 14 (Type)


State 17

   17 MethodHeader: VOID • IDENTIFIER LPAR FormalParamOpt RPAR

    IDENTIFIER  shift, and go to state 21


State 18

   15 Type: DOUBLE •

    $default  reduce using rule 15 (Type)


State 19

    7 FieldDecl: PUBLIC STATIC Type • IdentList SEMICOLON
    9 IdentList: • IdentList COMMA IDENTIFIER
   10          | • IDENTIFIER
   16 MethodHeader: Type • IDENTIFIER LPAR FormalParamOpt RPAR

    IDENTIFIER  shift, and go to state 22

    IdentList  go to state 23


State 20

    6 MethodDecl: PUBLIC STATIC MethodHeader • MethodBody
   24 MethodBody: • LBRACE StmtOrVarList RBRACE

    LBRACE  shift, and go to state 24

    MethodBody  go to state 25


State 21

   17 MethodHeader: VOID IDENTIFIER • LPAR FormalParamOpt RPAR

    LPAR  shift, and go to state 26


State 22

   10 IdentList: IDENTIFIER •  [SEMICOLON, COMMA]
   16 MethodHeader: Type IDENTIFIER • LPAR FormalParamOpt RPAR

    LPAR  shift, and go to state 27

    $default  reduce using rule 10 (IdentList)


State 23

    7 FieldDecl: PUBLIC STATIC Type IdentList • SEMICOLON
    9 IdentList: IdentList • COMMA IDENTIFIER

    SEMICOLON  shift, and go to state 28
    COMMA      shift, and go to state 29


State 24

   24 MethodBody: LBRACE • StmtOrVarList RBRACE
   25 StmtOrVarList: • StmtOrVarList Statement
   26              | • StmtOrVarList VarDecl
   27              | ε •

    $default  reduce using rule 27 (StmtOrVarList)

    StmtOrVarList  go to state 30


State 25

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody •

    $default  reduce using rule 6 (MethodDecl)


State 26

   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   17 MethodHeader: VOID IDENTIFIER LPAR • FormalParamOpt RPAR
   18 FormalParamOpt: • FormalParams
   19               | ε •  [RPAR]
   20 FormalParams: • NormalParams
   21             | • STRING LSQ RSQ IDENTIFIER
   22 NormalParams: • Type IDENTIFIER
   23             | • NormalParams COMMA Type IDENTIFIER

    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    STRING  shift, and go to state 31
    DOUBLE  shift, and go to state 18

    $default  reduce using rule 19 (FormalParamOpt)

    Type            go to state 32
    FormalParamOpt  go to state 33
    FormalParams    go to state 34
    NormalParams    go to state 35


State 27

   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   16 MethodHeader: Type IDENTIFIER LPAR • FormalParamOpt RPAR
   18 FormalParamOpt: • FormalParams
   19               | ε •  [RPAR]
   20 FormalParams: • NormalParams
   21             | • STRING LSQ RSQ IDENTIFIER
   22 NormalParams: • Type IDENTIFIER
   23             | • NormalParams COMMA Type IDENTIFIER

    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    STRING  shift, and go to state 31
    DOUBLE  shift, and go to state 18

    $default  reduce using rule 19 (FormalParamOpt)

    Type            go to state 32
    FormalParamOpt  go to state 36
    FormalParams    go to state 34
    NormalParams    go to state 35


State 28

    7 FieldDecl: PUBLIC STATIC Type IdentList SEMICOLON •

    $default  reduce using rule 7 (FieldDecl)


State 29

    9 IdentList: IdentList COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 37


State 30

   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   24 MethodBody: LBRACE StmtOrVarList • RBRACE
   25 StmtOrVarList: StmtOrVarList • Statement
   26              | StmtOrVarList • VarDecl
   28 VarDecl: • Type IdentListVar SEMICOLON
   29 Statement: • LBRACE StmtList RBRACE
   30          | • IfStmt
   31          | • SEMICOLON
   32          | • WHILE LPAR Expr RPAR Statement
   33          | • RETURN ExprOpt SEMICOLON
   34          | • ExprStmt SEMICOLON
   35          | • PRINT LPAR Expr RPAR SEMICOLON
   36          | • PRINT LPAR STRLIT RPAR SEMICOLON
   37          | • error SEMICOLON
   40 IfStmt: • IF LPAR Expr RPAR Statement ELSE Statement
   41       | • IF LPAR Expr RPAR Statement
   44 ExprStmt: • IDENTIFIER LPAR ArgListOpt RPAR
   45         | • IDENTIFIER LPAR error RPAR
   46         | • IDENTIFIER ASSIGN Expr
   47         | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   48         | • PARSEINT LPAR error RPAR

    error       shift, and go to state 38
    LBRACE      shift, and go to state 39
    RBRACE      shift, and go to state 40
    SEMICOLON   shift, and go to state 41
    BOOL        shift, and go to state 15
    INT         shift, and go to state 16
    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    RETURN      shift, and go to state 44
    PRINT       shift, and go to state 45
    PARSEINT    shift, and go to state 46
    IDENTIFIER  shift, and go to state 47
    DOUBLE      shift, and go to state 18

    Type       go to state 48
    VarDecl    go to state 49
    Statement  go to state 50
    IfStmt     go to state 51
    ExprStmt   go to state 52


State 31

   21 FormalParams: STRING • LSQ RSQ IDENTIFIER

    LSQ  shift, and go to state 53


State 32

   22 NormalParams: Type • IDENTIFIER

    IDENTIFIER  shift, and go to state 54


State 33

   17 MethodHeader: VOID IDENTIFIER LPAR FormalParamOpt • RPAR

    RPAR  shift, and go to state 55


State 34

   18 FormalParamOpt: FormalParams •

    $default  reduce using rule 18 (FormalParamOpt)


State 35

   20 FormalParams: NormalParams •  [RPAR]
   23 NormalParams: NormalParams • COMMA Type IDENTIFIER

    COMMA  shift, and go to state 56

    $default  reduce using rule 20 (FormalParams)


State 36

   16 MethodHeader: Type IDENTIFIER LPAR FormalParamOpt • RPAR

    RPAR  shift, and go to state 57


State 37

    9 IdentList: IdentList COMMA IDENTIFIER •

    $default  reduce using rule 9 (IdentList)


State 38

   37 Statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 58


State 39

   29 Statement: LBRACE • StmtList RBRACE
   38 StmtList: • StmtList Statement
   39         | ε •

    $default  reduce using rule 39 (StmtList)

    StmtList  go to state 59


State 40

   24 MethodBody: LBRACE StmtOrVarList RBRACE •

    $default  reduce using rule 24 (MethodBody)


State 41

   31 Statement: SEMICOLON •

    $default  reduce using rule 31 (Statement)


State 42

   40 IfStmt: IF • LPAR Expr RPAR Statement ELSE Statement
   41       | IF • LPAR Expr RPAR Statement

    LPAR  shift, and go to state 60


State 43

   32 Statement: WHILE • LPAR Expr RPAR Statement

    LPAR  shift, and go to state 61


State 44

   33 Statement: RETURN • ExprOpt SEMICOLON
   42 ExprOpt: • Expr
   43        | ε •  [SEMICOLON]
   49 Expr: • AssignExpr
   50     | • LPAR error RPAR
   51 AssignExpr: • IDENTIFIER ASSIGN AssignExpr
   52           | • OrExpr
   53 OrExpr: • OrExpr OR AndExpr
   54       | • AndExpr
   55 AndExpr: • AndExpr AND XorExpr
   56        | • XorExpr
   57 XorExpr: • XorExpr XOR EqExpr
   58        | • EqExpr
   59 EqExpr: • EqExpr EQ RelExpr
   60       | • EqExpr NE RelExpr
   61       | • RelExpr
   62 RelExpr: • RelExpr LT ShiftExpr
   63        | • RelExpr LE ShiftExpr
   64        | • RelExpr GT ShiftExpr
   65        | • RelExpr GE ShiftExpr
   66        | • ShiftExpr
   67 ShiftExpr: • ShiftExpr LSHIFT AddExpr
   68          | • ShiftExpr RSHIFT AddExpr
   69          | • AddExpr
   70 AddExpr: • AddExpr PLUS MulExpr
   71        | • AddExpr MINUS MulExpr
   72        | • MulExpr
   73 MulExpr: • MulExpr STAR UnaryExpr
   74        | • MulExpr DIV UnaryExpr
   75        | • MulExpr MOD UnaryExpr
   76        | • UnaryExpr
   77 UnaryExpr: • MINUS UnaryExpr
   78          | • NOT UnaryExpr
   79          | • PLUS UnaryExpr
   80          | • PostfixExpr
   81 PostfixExpr: • IDENTIFIER DOTLENGTH
   82            | • IDENTIFIER LPAR ArgListOpt RPAR
   83            | • IDENTIFIER LPAR error RPAR
   84            | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   85            | • PARSEINT LPAR error RPAR
   86            | • LPAR Expr RPAR
   87            | • IDENTIFIER
   88            | • NATURAL
   89            | • DECIMAL
   90            | • BOOLLIT

    LPAR        shift, and go to state 62
    PARSEINT    shift, and go to state 63
    NOT         shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PLUS        shift, and go to state 69
    MINUS       shift, and go to state 70

    $default  reduce using rule 43 (ExprOpt)

    ExprOpt      go to state 71
    Expr         go to state 72
    AssignExpr   go to state 73
    OrExpr       go to state 74
    AndExpr      go to state 75
    XorExpr      go to state 76
    EqExpr       go to state 77
    RelExpr      go to state 78
    ShiftExpr    go to state 79
    AddExpr      go to state 80
    MulExpr      go to state 81
    UnaryExpr    go to state 82
    PostfixExpr  go to state 83


State 45

   35 Statement: PRINT • LPAR Expr RPAR SEMICOLON
   36          | PRINT • LPAR STRLIT RPAR SEMICOLON

    LPAR  shift, and go to state 84


State 46

   47 ExprStmt: PARSEINT • LPAR IDENTIFIER LSQ Expr RSQ RPAR
   48         | PARSEINT • LPAR error RPAR

    LPAR  shift, and go to state 85


State 47

   44 ExprStmt: IDENTIFIER • LPAR ArgListOpt RPAR
   45         | IDENTIFIER • LPAR error RPAR
   46         | IDENTIFIER • ASSIGN Expr

    LPAR    shift, and go to state 86
    ASSIGN  shift, and go to state 87


State 48

   11 IdentListVar: • IdentListVar COMMA IDENTIFIER
   12             | • IDENTIFIER
   28 VarDecl: Type • IdentListVar SEMICOLON

    IDENTIFIER  shift, and go to state 88

    IdentListVar  go to state 89


State 49

   26 StmtOrVarList: StmtOrVarList VarDecl •

    $default  reduce using rule 26 (StmtOrVarList)


State 50

   25 StmtOrVarList: StmtOrVarList Statement •

    $default  reduce using rule 25 (StmtOrVarList)


State 51

   30 Statement: IfStmt •

    $default  reduce using rule 30 (Statement)


State 52

   34 Statement: ExprStmt • SEMICOLON

    SEMICOLON  shift, and go to state 90


State 53

   21 FormalParams: STRING LSQ • RSQ IDENTIFIER

    RSQ  shift, and go to state 91


State 54

   22 NormalParams: Type IDENTIFIER •

    $default  reduce using rule 22 (NormalParams)


State 55

   17 MethodHeader: VOID IDENTIFIER LPAR FormalParamOpt RPAR •

    $default  reduce using rule 17 (MethodHeader)


State 56

   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   23 NormalParams: NormalParams COMMA • Type IDENTIFIER

    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    DOUBLE  shift, and go to state 18

    Type  go to state 92


State 57

   16 MethodHeader: Type IDENTIFIER LPAR FormalParamOpt RPAR •

    $default  reduce using rule 16 (MethodHeader)


State 58

   37 Statement: error SEMICOLON •

    $default  reduce using rule 37 (Statement)


State 59

   29 Statement: • LBRACE StmtList RBRACE
   29          | LBRACE StmtList • RBRACE
   30          | • IfStmt
   31          | • SEMICOLON
   32          | • WHILE LPAR Expr RPAR Statement
   33          | • RETURN ExprOpt SEMICOLON
   34          | • ExprStmt SEMICOLON
   35          | • PRINT LPAR Expr RPAR SEMICOLON
   36          | • PRINT LPAR STRLIT RPAR SEMICOLON
   37          | • error SEMICOLON
   38 StmtList: StmtList • Statement
   40 IfStmt: • IF LPAR Expr RPAR Statement ELSE Statement
   41       | • IF LPAR Expr RPAR Statement
   44 ExprStmt: • IDENTIFIER LPAR ArgListOpt RPAR
   45         | • IDENTIFIER LPAR error RPAR
   46         | • IDENTIFIER ASSIGN Expr
   47         | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   48         | • PARSEINT LPAR error RPAR

    error       shift, and go to state 38
    LBRACE      shift, and go to state 39
    RBRACE      shift, and go to state 93
    SEMICOLON   shift, and go to state 41
    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    RETURN      shift, and go to state 44
    PRINT       shift, and go to state 45
    PARSEINT    shift, and go to state 46
    IDENTIFIER  shift, and go to state 47

    Statement  go to state 94
    IfStmt     go to state 51
    ExprStmt   go to state 52


State 60

   40 IfStmt: IF LPAR • Expr RPAR Statement ELSE Statement
   41       | IF LPAR • Expr RPAR Statement
   49 Expr: • AssignExpr
   50     | • LPAR error RPAR
   51 AssignExpr: • IDENTIFIER ASSIGN AssignExpr
   52           | • OrExpr
   53 OrExpr: • OrExpr OR AndExpr
   54       | • AndExpr
   55 AndExpr: • AndExpr AND XorExpr
   56        | • XorExpr
   57 XorExpr: • XorExpr XOR EqExpr
   58        | • EqExpr
   59 EqExpr: • EqExpr EQ RelExpr
   60       | • EqExpr NE RelExpr
   61       | • RelExpr
   62 RelExpr: • RelExpr LT ShiftExpr
   63        | • RelExpr LE ShiftExpr
   64        | • RelExpr GT ShiftExpr
   65        | • RelExpr GE ShiftExpr
   66        | • ShiftExpr
   67 ShiftExpr: • ShiftExpr LSHIFT AddExpr
   68          | • ShiftExpr RSHIFT AddExpr
   69          | • AddExpr
   70 AddExpr: • AddExpr PLUS MulExpr
   71        | • AddExpr MINUS MulExpr
   72        | • MulExpr
   73 MulExpr: • MulExpr STAR UnaryExpr
   74        | • MulExpr DIV UnaryExpr
   75        | • MulExpr MOD UnaryExpr
   76        | • UnaryExpr
   77 UnaryExpr: • MINUS UnaryExpr
   78          | • NOT UnaryExpr
   79          | • PLUS UnaryExpr
   80          | • PostfixExpr
   81 PostfixExpr: • IDENTIFIER DOTLENGTH
   82            | • IDENTIFIER LPAR ArgListOpt RPAR
   83            | • IDENTIFIER LPAR error RPAR
   84            | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   85            | • PARSEINT LPAR error RPAR
   86            | • LPAR Expr RPAR
   87            | • IDENTIFIER
   88            | • NATURAL
   89            | • DECIMAL
   90            | • BOOLLIT

    LPAR        shift, and go to state 62
    PARSEINT    shift, and go to state 63
    NOT         shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PLUS        shift, and go to state 69
    MINUS       shift, and go to state 70

    Expr         go to state 95
    AssignExpr   go to state 73
    OrExpr       go to state 74
    AndExpr      go to state 75
    XorExpr      go to state 76
    EqExpr       go to state 77
    RelExpr      go to state 78
    ShiftExpr    go to state 79
    AddExpr      go to state 80
    MulExpr      go to state 81
    UnaryExpr    go to state 82
    PostfixExpr  go to state 83


State 61

   32 Statement: WHILE LPAR • Expr RPAR Statement
   49 Expr: • AssignExpr
   50     | • LPAR error RPAR
   51 AssignExpr: • IDENTIFIER ASSIGN AssignExpr
   52           | • OrExpr
   53 OrExpr: • OrExpr OR AndExpr
   54       | • AndExpr
   55 AndExpr: • AndExpr AND XorExpr
   56        | • XorExpr
   57 XorExpr: • XorExpr XOR EqExpr
   58        | • EqExpr
   59 EqExpr: • EqExpr EQ RelExpr
   60       | • EqExpr NE RelExpr
   61       | • RelExpr
   62 RelExpr: • RelExpr LT ShiftExpr
   63        | • RelExpr LE ShiftExpr
   64        | • RelExpr GT ShiftExpr
   65        | • RelExpr GE ShiftExpr
   66        | • ShiftExpr
   67 ShiftExpr: • ShiftExpr LSHIFT AddExpr
   68          | • ShiftExpr RSHIFT AddExpr
   69          | • AddExpr
   70 AddExpr: • AddExpr PLUS MulExpr
   71        | • AddExpr MINUS MulExpr
   72        | • MulExpr
   73 MulExpr: • MulExpr STAR UnaryExpr
   74        | • MulExpr DIV UnaryExpr
   75        | • MulExpr MOD UnaryExpr
   76        | • UnaryExpr
   77 UnaryExpr: • MINUS UnaryExpr
   78          | • NOT UnaryExpr
   79          | • PLUS UnaryExpr
   80          | • PostfixExpr
   81 PostfixExpr: • IDENTIFIER DOTLENGTH
   82            | • IDENTIFIER LPAR ArgListOpt RPAR
   83            | • IDENTIFIER LPAR error RPAR
   84            | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   85            | • PARSEINT LPAR error RPAR
   86            | • LPAR Expr RPAR
   87            | • IDENTIFIER
   88            | • NATURAL
   89            | • DECIMAL
   90            | • BOOLLIT

    LPAR        shift, and go to state 62
    PARSEINT    shift, and go to state 63
    NOT         shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PLUS        shift, and go to state 69
    MINUS       shift, and go to state 70

    Expr         go to state 96
    AssignExpr   go to state 73
    OrExpr       go to state 74
    AndExpr      go to state 75
    XorExpr      go to state 76
    EqExpr       go to state 77
    RelExpr      go to state 78
    ShiftExpr    go to state 79
    AddExpr      go to state 80
    MulExpr      go to state 81
    UnaryExpr    go to state 82
    PostfixExpr  go to state 83


State 62

   49 Expr: • AssignExpr
   50     | • LPAR error RPAR
   50     | LPAR • error RPAR
   51 AssignExpr: • IDENTIFIER ASSIGN AssignExpr
   52           | • OrExpr
   53 OrExpr: • OrExpr OR AndExpr
   54       | • AndExpr
   55 AndExpr: • AndExpr AND XorExpr
   56        | • XorExpr
   57 XorExpr: • XorExpr XOR EqExpr
   58        | • EqExpr
   59 EqExpr: • EqExpr EQ RelExpr
   60       | • EqExpr NE RelExpr
   61       | • RelExpr
   62 RelExpr: • RelExpr LT ShiftExpr
   63        | • RelExpr LE ShiftExpr
   64        | • RelExpr GT ShiftExpr
   65        | • RelExpr GE ShiftExpr
   66        | • ShiftExpr
   67 ShiftExpr: • ShiftExpr LSHIFT AddExpr
   68          | • ShiftExpr RSHIFT AddExpr
   69          | • AddExpr
   70 AddExpr: • AddExpr PLUS MulExpr
   71        | • AddExpr MINUS MulExpr
   72        | • MulExpr
   73 MulExpr: • MulExpr STAR UnaryExpr
   74        | • MulExpr DIV UnaryExpr
   75        | • MulExpr MOD UnaryExpr
   76        | • UnaryExpr
   77 UnaryExpr: • MINUS UnaryExpr
   78          | • NOT UnaryExpr
   79          | • PLUS UnaryExpr
   80          | • PostfixExpr
   81 PostfixExpr: • IDENTIFIER DOTLENGTH
   82            | • IDENTIFIER LPAR ArgListOpt RPAR
   83            | • IDENTIFIER LPAR error RPAR
   84            | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   85            | • PARSEINT LPAR error RPAR
   86            | • LPAR Expr RPAR
   86            | LPAR • Expr RPAR
   87            | • IDENTIFIER
   88            | • NATURAL
   89            | • DECIMAL
   90            | • BOOLLIT

    error       shift, and go to state 97
    LPAR        shift, and go to state 62
    PARSEINT    shift, and go to state 63
    NOT         shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
    PLUS        shift, and go to state 69
    MINUS       shift, and go to state 70
